syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(CreateUserDto) returns (User){}
    rpc FindAllUsers(Empty) returns (UserList){}
    rpc FindOneUser(FindOneUserDto) returns (User){}
    rpc UpdateUser(UpdateUserDto) returns (User){}
    rpc RemoveUser(FindOneUserDto) returns (User){}
    rpc QueryUsers (stream PaginationDto) returns (stream UserList) {}
}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}

message UpdateUserDto {
    string id = 1;
    SocialMedia socialMedia = 2;
}

message FindOneUserDto {
    string id = 1;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

message CreateUserDto {
    string username = 1;
    string password = 2;
    int32 age = 3;
    SocialMedia socialMedia = 4;
    UserRole role = 5;
}

message User{
    string id = 1;
    string username = 2;
    string password = 3;
    int32 age = 4;
    bool isActive = 5;
    SocialMedia socialMedia = 6;
    UserRole role = 7;
}

message SocialMedia{
    string email = 1;
    string phone = 2;
    optional string fbUri=3;
    optional string twitterUri=4;
}

enum UserRole {
    MEMBER = 0;
    ADMIN = 1;
    MODERATOR = 2;
}